# morpho

./: .gitignore  .readthedocs.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
morpho5/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.m1  build.h  count  main.c  morpho.h  morphodox
morpho5/builtin/: builtin.c  builtin.h  file.c  file.h  functions.c  functions.h  system.c  system.h  veneer.c  veneer.h
morpho5/datastructures/: cmplx.c  cmplx.h  complex.c  complex.h  complexobj.c  complexobj.h  dictionary.c  dictionary.h  matrix.c  matrix.h  matrixveneer.h  matrixveneer2.h  object.c  object.h  sparse.c  sparse.h  syntaxtree.c  syntaxtree.h  value.c  value.h  varray.h
morpho5/datastructures/GPUdatastructures/: cudainterface.cu  cudainterface.h  gpuinterface.h  gpumatrix.c  gpumatrix.h  gpusparse.c  gpusparse.h  kernals.h
morpho5/docs/: .readthedocs.yml  array.md  builtin.md  classes.md  color.md  constants.md  controlflow.md  delaunay.md  dictionary.md  field.md  file.md  functionals.md  functions.md  graphics.md  help.md  implicitmesh.md  index.rst  list.md  matrix.md  mesh.md  meshgen.md  meshtools.md  modules.md  optimize.md  plot.md  povray.md  requirements.txt  selection.md  string.md  syntax.md  system.md  unittest.md  values.md  variables.md  vtk.md
morpho5/geometry/: discretization.c  discretization.h  field.c  field.h  functional.c  functional.h  integrate.c  integrate.h  mesh.c  mesh.h  selection.c  selection.h
morpho5/help/: builtin.md  dictionary.md  error.md  file.md  graphics.md  index.md  language.md  list.md  matrix.md  meshtools.md  range.md  selection.md  shapeopt.md  sparse.md  string.md  syntax.md
morpho5/html/: annotated.html  build_8h.html  build_8h_source.html  builtin_8c.html  builtin_8h.html  builtin_8h_source.html  classes.html  cli_8c.html  cli_8h.html  cli_8h_source.html  common_8c.html  common_8h.html  common_8h_source.html  compile_8c.html  compile_8h.html  compile_8h_source.html  core_8h.html  core_8h_source.html  dictionary_8h.html  dictionary_8h_source.html  dir_28a083f4f6983168a4525eb7df1d313c.html  dir_93effe02d2e8dd09437fb49d0adaddf7.html  dir_99f10210d4aeaea751c18de4171643e3.html  dir_b31d54d5631803016a26f28213a41162.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_dcd6bf565d8b6008694ea35f4b77d1ca.html  dir_e3380d2178455503f266746fb14246a5.html  error_8c.html  error_8h.html  error_8h_source.html  file_8c.html  file_8h.html  file_8h_source.html  files.html  functions.html  functions_8c.html  functions_8h.html  functions_8h_source.html  functions_vars.html  globals.html  (+188 more)
morpho5/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+90 more)
morpho5/interface/: cli.c  cli.h  help.c  help.h  linedit.c  linedit.h
morpho5/latex/: annotated.tex  build_8h.tex  builtin_8c.tex  builtin_8h.tex  cli_8c.tex  cli_8h.tex  common_8c.tex  common_8h.tex  compile_8c.tex  compile_8h.tex  core_8h.tex  dictionary_8h.tex  error_8c.tex  error_8h.tex  file_8c.tex  file_8h.tex  files.tex  functions_8c.tex  functions_8h.tex  help_8c.tex  help_8h.tex  linedit_8c.tex  linedit_8h.tex  main_8c.tex  matrix_8c.tex  matrix_8h.tex  md_help_another.tex  md_help_file.tex  md_help_index.tex  md_help_language.tex  md_help_matrix.tex  md_help_sparse.tex  md_help_syntax.tex  memory_8h.tex  mesh_8c.tex  mesh_8h.tex  morpho_8h.tex  object_8c.tex  object_8h.tex  opcodes_8h.tex  (+69 more)
morpho5/modules/: color.morpho  constants.morpho  delaunay.morpho  functionals.morpho  graphics.morpho  kdtree.morpho  meshgen.morpho  meshslice.morpho  meshtools.morpho  optimize.morpho  parser.morpho  plot.morpho  povray.morpho  shapeopt.morpho  unittest.morpho  vtk.morpho
morpho5/utils/: common.c  common.h  debug.c  debug.h  error.c  error.h  memory.c  memory.h  parse.c  parse.h  random.c
morpho5/vm/: compile.c  compile.h  core.h  opcodes.h  optimize.c  optimize.h  profile.c  profile.h  vm.c  vm.h
morphoview/: CMakeLists.txt  Makefile  Makefile.linux  Makefile.m1  command.c  command.h  display.c  display.h  main.c  matrix3d.c  matrix3d.h  render.c  render.h  scene.c  scene.h  text.c  text.h
src/: CMakeLists.txt  Makefile  build.h  libmorpho.dylib  morpho.h
src/builtin/: CMakeLists.txt  builtin.c  builtin.h  functiondefs.c  functiondefs.h  functions.h  system.c  system.h  veneer.c  veneer.h
src/classes/: CMakeLists.txt  array.c  array.h  bool.c  bool.h  classes.h  closure.c  closure.h  clss.c  clss.h  cmplx.c  cmplx.h  dict.c  dict.h  err.c  err.h  file.c  file.h  flt.c  flt.h  function.c  function.h  instance.c  instance.h  int.c  int.h  invocation.c  invocation.h  json.c  json.h  list.c  list.h  metafunction.c  metafunction.h  range.c  range.h  strng.c  strng.h  system.c  system.h  (+4 more)
src/core/: CMakeLists.txt  compile.c  compile.h  core.h  gc.c  gc.h  opcodes.h  optimize.c  vm.c  vm.h
src/datastructures/: CMakeLists.txt  cmplx.c  debugannotation.c  debugannotation.h  dictionary.c  dictionary.h  error.c  error.h  matrix.c  matrix.h  object.c  object.h  program.c  program.h  signature.c  signature.h  syntaxtree.c  syntaxtree.h  value.c  value.h  varray.c  varray.h  version.c  version.h
src/debug/: CMakeLists.txt  debug.c  debug.h  profile.c  profile.h
src/geometry/: CMakeLists.txt  discretization.c  discretization.h  field.c  field.h  functional.c  functional.h  geometry.c  geometry.h  integrate.c  integrate.h  mesh.c  mesh.h  selection.c  selection.h
src/linalg/: CMakeLists.txt  complexmatrix.c  complexmatrix.h  matrix.c  matrix.h  newlinalg.c  newlinalg.h  sparse.c  sparse.h
src/support/: CMakeLists.txt  common.c  common.h  error.c  error.h  extensions.c  extensions.h  format.c  format.h  lex.c  lex.h  memory.c  memory.h  parse.c  parse.h  platform.c  platform.h  random.c  random.h  resources.c  resources.h  threadpool.c  threadpool.h
src/utils/: common.h  debug.c  debug.h  error.c  memory.h  parse.h
src/vm/: CMakeLists.txt  vm.c  vm.h
(+1302 files in other folders)
